# src/api-docs/openapi.json
@@ -260,37 +260,6 @@
           }
         }
       },
-      "UpdatedMovieData": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "number",
-            "description": "Movie ID",
-            "example": 1
-          },
-          "name": {
-            "type": "string",
-            "description": "Movie name",
-            "example": "Inception"
-          },
-          "year": {
-            "type": "integer",
-            "description": "Movie release year",
-            "example": 2010
-          },
-          "rating": {
-            "type": "number",
-            "description": "Movie rating",
-            "example": 7.5
-          }
-        },
-        "required": [
-          "id",
-          "name",
-          "year",
-          "rating"
-        ]
-      },
       "UpdateMovieResponse": {
         "type": "object",
         "properties": {
@@ -300,7 +269,35 @@
             "example": 200
           },
           "data": {
-            "$ref": "#/components/schemas/UpdatedMovieData"
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "number",
+                "description": "Movie ID",
+                "example": 1
+              },
+              "name": {
+                "type": "string",
+                "description": "Movie name",
+                "example": "Inception"
+              },
+              "year": {
+                "type": "number",
+                "description": "Movie release year",
+                "example": 2010
+              },
+              "rating": {
+                "type": "number",
+                "description": "Movie rating",
+                "example": 7.5
+              }
+            },
+            "required": [
+              "id",
+              "name",
+              "year",
+              "rating"
+            ]
           },
           "error": {
             "type": "string",
@@ -340,7 +337,35 @@
             "example": 200
           },
           "data": {
-            "$ref": "#/components/schemas/UpdatedMovieData"
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "number",
+                "description": "Movie ID",
+                "example": 1
+              },
+              "name": {
+                "type": "string",
+                "description": "Movie name",
+                "example": "Inception"
+              },
+              "year": {
+                "type": "number",
+                "description": "Movie release year",
+                "example": 2010
+              },
+              "rating": {
+                "type": "number",
+                "description": "Movie rating",
+                "example": 7.5
+              }
+            },
+            "required": [
+              "id",
+              "name",
+              "year",
+              "rating"
+            ]
           },
           "error": {
             "type": "string",
